--- a/donation.html
+++ b/donation.html
@@ -3,199 +3,199 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Noorussalam Madrasa – Multi-Theme Donation</title>
+<title>Noorussalam Madrasa – Donation Page</title>
 
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<!-- AOS Animation -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
-
 <style>
-body { font-family: 'Poppins', sans-serif; margin:0; scroll-behavior: smooth; background: #f8faff; }
-.container { width:90%; max-width:1100px; margin:auto; }
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #f8faff;
+  scroll-behavior: smooth;
+}
 
-/* Loader */
-#loader { position:fixed; width:100%; height:100%; background:#f9fafb; display:flex; flex-direction:column; align-items:center; justify-content:center; z-index:9999;}
-.spinner { width:55px; height:55px; border:6px solid #d4d4d4; border-top:6px solid #1e3a8a; border-radius:50%; animation:spin 1s linear infinite;}
-@keyframes spin{to{transform:rotate(360deg);}}
-#loader p { margin-top:15px; font-size:18px; color:#1e3a8a; }
+/* GLOBAL CONTAINER */
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
+}
 
-/* Tabs */
-.nav-tabs .nav-link { font-weight:600; font-size:16px; }
-.tab-content { padding-top:40px; }
+/* HERO SECTION */
+.hero {
+  text-align: center;
+  padding: 70px 0 40px;
+}
+.hero h1 { font-size: 45px; font-weight: 800; color: #0A1E59; }
+.hero p { font-size: 20px; margin-top: 10px; }
 
-/* Hero */
-.hero { text-align:center; padding:70px 0 40px;}
-.hero h1{ font-size:45px; font-weight:800; color:#0A1E59;}
-.hero p{ font-size:20px; margin-top:10px; }
+/* UPI SECTION */
+.upi-section {
+  padding: 70px 0;
+  text-align: center;
+}
+.upi-title { font-size: 34px; font-weight: 800; color: #1E3A8A; }
+.upi-sub { font-size: 18px; margin-bottom: 35px; }
+.upi-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+.upi-btn {
+  width: 170px;
+  padding: 18px;
+  text-decoration: none;
+  background: white;
+  border-radius: 16px;
+  box-shadow: 0 8px 22px rgba(0,0,0,0.08);
+  font-size: 18px;
+  font-weight: 600;
+  color: #0A1E59;
+  text-align: center;
+  transition: 0.3s;
+}
+.upi-btn img { height: 45px; margin-bottom: 10px; }
+.upi-btn:hover { transform: translateY(-5px); box-shadow: 0 12px 30px rgba(0,0,0,0.12); }
 
-/* Donor Stats */
-.donor-stats { padding:60px 0; background: linear-gradient(135deg,#f3f8ff,#ffffff,#f2f9ff);}
-.counter-box { text-align:center; margin-bottom:50px;}
-.counter-box h2 { font-size:32px; font-weight:700; color:#1E3A8A; }
-.counter { font-size:54px; font-weight:800; color:#0A1E59; margin-top:12px; }
+/* THANK YOU POPUP */
+#thankYouPopup {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  background: #1E3A8A;
+  color: white;
+  padding: 25px 45px;
+  font-size: 22px;
+  font-weight: 700;
+  border-radius: 20px;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+  opacity: 0;
+  pointer-events: none;
+  z-index: 99999;
+  text-align: center;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+.bounce {
+  opacity: 1 !important;
+  transform: translate(-50%, -50%) scale(1.1);
+  animation: bounceAnim 0.6s forwards;
+}
+@keyframes bounceAnim {
+  0% { transform: translate(-50%, -50%) scale(0); }
+  60% { transform: translate(-50%, -50%) scale(1.2); }
+  100% { transform: translate(-50%, -50%) scale(1); }
+}
 
-/* UPI Section */
-.upi-section { padding:90px 0; background:#f7faff; text-align:center;}
-.upi-title { font-size:34px; font-weight:800; color:#1E3A8A; }
-.upi-sub { font-size:18px; margin-bottom:35px; }
-.upi-buttons { display:flex; justify-content:center; gap:20px; flex-wrap:wrap; margin-bottom:40px;}
-.upi-btn { width:170px; padding:18px; text-decoration:none; background:white; border-radius:16px; box-shadow:0 8px 22px rgba(0,0,0,0.08); font-size:18px; font-weight:600; color:#0A1E59; text-align:center; transition:0.3s; }
-.upi-btn img { height:45px; margin-bottom:10px;}
-.upi-btn:hover{ transform:translateY(-5px); box-shadow:0 12px 30px rgba(0,0,0,0.12);}
-.qr-box{ margin-top:50px; background:white; display:inline-block; padding:40px; border-radius:20px; box-shadow:0 8px 22px rgba(0,0,0,0.08);}
-.qr-box h3{ font-size:26px; margin-bottom:20px; color:#1E3A8A;}
-.qr-image{ width:260px; height:260px; border-radius:14px; }
+/* PARALLAX MOSQUE */
+.parallax-mosque {
+  background-image: url('https://i.imgur.com/Jitq2I1.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 140px 0;
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.parallax-mosque::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.45);
+}
+.overlay-text { position: relative; }
+.overlay-text h2 {
+  font-size: 42px;
+  font-weight: 800;
+  animation: glowText 3s infinite alternate;
+}
+@keyframes glowText {
+  from { text-shadow: 0 0 12px #ffe38a; }
+  to   { text-shadow: 0 0 25px #ffd35c; }
+}
 
-/* Parallax */
-.parallax-mosque { background-image: url('https://i.imgur.com/Jitq2I1.png'); background-size:cover; background-position:center; background-attachment:fixed; padding:140px 0; text-align:center; color:white; position:relative;}
-.parallax-mosque::before{ content:""; position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.45);}
-.overlay-text { position:relative; }
-.overlay-text h2{ font-size:42px; font-weight:800; animation:glowText 3s infinite alternate;}
-.overlay-text p{font-size:20px;}
-@keyframes glowText { from{ text-shadow:0 0 12px #ffe38a;} to{ text-shadow:0 0 25px #ffd35c;} }
-
-/* Countdown */
-.campaign { text-align:center; padding:60px 0; background:#eef3ff;}
-#countdown { font-size:32px; font-weight:bold; color:#0A1E59; }
-
-/* Theme Toggle */
-.theme-toggle { position:fixed; top:20px; right:20px; background:#ffffff; width:55px; height:55px; border-radius:50%; box-shadow:0 4px 18px rgba(0,0,0,0.2); display:flex; align-items:center; justify-content:center; cursor:pointer; z-index:9999; }
-.theme-toggle i{ font-size:22px; color:#0A1E59;}
-.dark-mode { background:#0b0f19 !important; color:white !important;}
-.dark-mode * { color:white !important; }
-
+/* AUDIO ICON HIDDEN */
+audio { display: none; }
 </style>
 </head>
 <body>
 
-<!-- Loader -->
-<div id="loader"><div class="spinner"></div><p>Loading...</p></div>
-
-<!-- Theme Toggle -->
-<div class="theme-toggle" onclick="toggleTheme()"><i id="themeIcon" class="fas fa-moon"></i></div>
-
-<!-- Hero -->
-<section class="hero" data-aos="fade-down">
+<!-- HERO -->
+<section class="hero">
   <h1>Support Noorussalam Madrasa</h1>
   <p>Your donation is Sadaqah Jariyah</p>
 </section>
 
-<!-- Tabs -->
-<div class="container">
-  <ul class="nav nav-tabs justify-content-center" id="themeTabs" role="tablist">
-    <li class="nav-item"><button class="nav-link active" id="theme1-tab" data-bs-toggle="tab" data-bs-target="#theme1">Theme 1</button></li>
-    <li class="nav-item"><button class="nav-link" id="theme2-tab" data-bs-toggle="tab" data-bs-target="#theme2">Theme 2</button></li>
-    <li class="nav-item"><button class="nav-link" id="theme3-tab" data-bs-toggle="tab" data-bs-target="#theme3">Theme 3</button></li>
-  </ul>
-
-  <div class="tab-content">
-    <div class="tab-pane fade show active" id="theme1">
-      <section class="donor-stats" data-aos="fade-up">
-        <div class="counter-box"><h2>Total Donations</h2><div id="totalDonation1" class="counter" data-target="452300">₹0</div></div>
-      </section>
-    </div>
-    <div class="tab-pane fade" id="theme2">
-      <section class="donor-stats" data-aos="fade-up">
-        <div class="counter-box"><h2>Total Donations</h2><div id="totalDonation2" class="counter" data-target="378900">₹0</div></div>
-      </section>
-    </div>
-    <div class="tab-pane fade" id="theme3">
-      <section class="donor-stats" data-aos="fade-up">
-        <div class="counter-box"><h2>Total Donations</h2><div id="totalDonation3" class="counter" data-target="501200">₹0</div></div>
-      </section>
+<!-- UPI DONATION -->
+<section class="upi-section">
+  <div class="container">
+    <h2 class="upi-title">Donate Easily via UPI</h2>
+    <p class="upi-sub">Fast, secure & direct donation</p>
+    <div class="upi-buttons">
+      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">Google Pay
+      </a>
+      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">PhonePe
+      </a>
+      <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">Paytm
+      </a>
     </div>
   </div>
-</div>
-
-<!-- UPI & QR -->
-<section class="upi-section" data-aos="fade-up">
-  <h2 class="upi-title">Donate via UPI</h2>
-  <p class="upi-sub">Fast, secure & direct donation</p>
-  <div class="upi-buttons">
-    <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Google_Pay_Logo.svg">Google Pay</a>
-    <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/PhonePe_Logo.svg">PhonePe</a>
-    <a class="upi-btn" href="upi://pay?pa=YOURUPIID@okbank&pn=Noorussalam%20Madrasa&cu=INR"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Paytm_logo.png">Paytm</a>
-  </div>
-  <div class="qr-box"><h3>Scan & Donate</h3><img src="YOUR_QR_IMAGE.png" class="qr-image"></div>
 </section>
 
-<!-- Parallax Mosque -->
-<section class="parallax-mosque" data-aos="fade-up">
+<!-- THANK YOU POPUP -->
+<div id="thankYouPopup">Thank you for your donation! 💖</div>
+
+<!-- PARALLAX MOSQUE -->
+<section class="parallax-mosque">
   <div class="overlay-text">
     <h2>“Whoever builds a masjid, Allah will build for him a house in Jannah.”</h2>
     <p>— Prophet Muhammad ﷺ</p>
   </div>
 </section>
 
-<!-- Countdown -->
-<section class="campaign" data-aos="fade-up">
-  <h2>🚀 Special Ramadan Campaign</h2>
-  <p>Ends in:</p>
-  <div id="countdown"></div>
-</section>
+<!-- AUDIO -->
+<audio id="donateSound">
+  <source src="https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3">
+</audio>
 
-<!-- Audio -->
-<audio id="donateSound"><source src="https://assets.mixkit.co/sfx/preview/mixkit-software-interface-start-2574.mp3"></audio>
+<!-- CONFETTI CDN -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
-<!-- Scripts -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script>
-AOS.init({duration:1200});
+// Select all UPI buttons
+const upiButtons = document.querySelectorAll(".upi-btn");
+upiButtons.forEach(btn => {
+  btn.addEventListener("click", (e) => {
+    // Play donation sound
+    document.getElementById("donateSound").play();
 
-// Loader
-window.onload = ()=>{ setTimeout(()=>{document.getElementById("loader").style.display="none"},800) };
-
-// Theme toggle
-function toggleTheme(){
-  document.body.classList.toggle("dark-mode");
-  document.getElementById("themeIcon").classList.toggle("fa-sun");
-  document.getElementById("themeIcon").classList.toggle("fa-moon");
-}
-
-// Animated counters
-function animateCounter(id){
-  const el=document.getElementById(id);
-  const target=parseInt(el.dataset.target);
-  let count=0;
-  const increment=Math.ceil(target/150);
-  const observer=new IntersectionObserver(entries=>{
-    entries.forEach(entry=>{
-      if(entry.isIntersecting){
-        function updateCounter(){
-          count+=increment;
-          if(count>target) count=target;
-          el.innerHTML="₹"+count.toLocaleString();
-          if(count<target) requestAnimationFrame(updateCounter);
-        }
-        updateCounter();
-      }
+    // Launch confetti
+    confetti({
+      particleCount: 120,
+      spread: 70,
+      origin: { y: 0.6 }
     });
-  }, {threshold:0.5});
-  observer.observe(el);
-}
-animateCounter("totalDonation1");
-animateCounter("totalDonation2");
-animateCounter("totalDonation3");
 
-// Countdown
-let endDate=new Date("March 30, 2025 23:59:59").getTime();
-setInterval(()=>{
-  let now=Date.now(); let diff=endDate-now;
-  let d=Math.floor(diff/(1000*60*60*24));
-  let h=Math.floor((diff%(1000*60*60*24))/(1000*60*60));
-  let m=Math.floor((diff%(1000*60*60))/(1000*60));
-  let s=Math.floor((diff%(1000*60))/1000);
-  document.getElementById("countdown").innerHTML=`${d}d ${h}h ${m}m ${s}s`;
-},1000);
+    // Show Thank You popup
+    const popup = document.getElementById("thankYouPopup");
+    popup.classList.add("bounce");
+    setTimeout(() => {
+      popup.classList.remove("bounce");
+    }, 1500);
+  });
+});
 </script>
 
 </body>
